# Trogdor-Reburninated

./: .gitignore  README.md  To-Do List.txt  Trogdor-Reburninated.sln
Scripts/: all_to_h.sh  audio_loudener.bat  audio_loudener_uniform.bat  audio_loudener_uniform_ignore_max.bat  compile_all.bat  convert_audio_for_systems.bat
Trogdor-Reburninated/: CMakeLists.txt  Makefile_3ds  Makefile_gc  Makefile_gc_sdl2  Makefile_linux  Makefile_pc  Makefile_psp  Makefile_switch  Makefile_wii  Makefile_wii_sdl2  Makefile_xbox  Trogdor-Reburninated.filters  Trogdor-Reburninated.rc  Trogdor-Reburninated.vcxproj  Trogdor-Reburninated.vcxproj.filters  make_rg35xx.sh  make_vita.sh  make_wii_u.sh  resource.h
Trogdor-Reburninated/Makefiles/: Android.mk  Application.mk  Makefile_3ds  Makefile_funkey  Makefile_gc  Makefile_gc_sdl1  Makefile_linux  Makefile_pc  Makefile_pc_x86  Makefile_psp  Makefile_switch  Makefile_wii  Makefile_wii_sdl1  Makefile_xbox  make_rg35xx.sh  make_vita.sh  make_wii_u.sh
Trogdor-Reburninated/data/: demo.gba
Trogdor-Reburninated/release-resources/: Trogdor-Reburninated_rg35xx.sh  app_3ds.rsf  banner_3ds.bnr  meta_wii.xml  meta_wiiu.xml  resource.rc  sound_banner_3ds.bcwav
Trogdor-Reburninated/src/: SDL_rotozoom.c  SDL_rotozoom.h  classes.cpp  classes.h  config.cpp  config.h  cutscenes.cpp  cutscenes.h  general.cpp  general.h  goombasend.c  goombasend.h  include.h  include_fonts.h  include_graphics.h  include_sfx.h  input.cpp  input.h  level_data.h  main.cpp  main.h  media_objects_init.cpp  media_objects_init.h  menu.cpp  menu.h  on_open_and_close.cpp  on_open_and_close.h  shared.h  sound_logic.cpp  sound_logic.h  sprite_objects.cpp  sprite_objects.h  system_specific.cpp  system_specific.h  system_specific_macros.h  text_objects.cpp  text_objects.h  text_objects_sdl1.h  text_objects_sdl2.h  window.cpp  (+1 more)
Trogdor-Reburninated/src/OSLibAudio/: VirtualFile.c  VirtualFile.h  audio.c  audio.h  bgm.c  oslib.h  vfsFile.c
Trogdor-Reburninated/src/OSLibAudio/sample/: main.c
Trogdor-Reburninated/src/fonts_h/: 29_NOKIA_5110_FontSet.cpp  29_NOKIA_5110_FontSet.h  54_serif_v01.cpp  54_serif_v01.h  Commodore_Pixelized_v1_2.cpp  Commodore_Pixelized_v1_2.h  serif_v01.cpp  serif_v01.h
Trogdor-Reburninated/src/graphics_h/: archer.cpp  archer.h  arrow.cpp  arrow.h  arrow_funnyjoke.cpp  arrow_funnyjoke.h  bm_empty.cpp  bm_empty.h  bm_full.cpp  bm_full.h  burninate_message_fire.cpp  burninate_message_fire.h  burninate_text.cpp  burninate_text.h  cottage.cpp  cottage.h  cottage_fire.cpp  cottage_fire.h  death_message.cpp  death_message.h  end_of_level_flash.cpp  end_of_level_flash.h  end_of_level_trogdor.cpp  end_of_level_trogdor.h  game_over_banner.cpp  game_over_banner.h  game_over_text.cpp  game_over_text.h  game_over_trogdor.cpp  game_over_trogdor.h  heart.cpp  heart.h  jonathan_howe.cpp  jonathan_howe.h  kerrek.cpp  kerrek.h  kerrek_smoked.cpp  kerrek_smoked.h  knight.cpp  knight.h  (+44 more)
Trogdor-Reburninated/src/graphics_h/backgrounds/: bg_1.cpp  bg_1.h  bg_2.cpp  bg_2.h  bg_3.cpp  bg_3.h  bg_4.cpp  bg_4.h  bg_treasure_hut.cpp  bg_treasure_hut.h
Trogdor-Reburninated/src/graphics_h/overlays/: basement_bottom.cpp  basement_bottom.h  basement_bottom_240p.cpp  basement_bottom_240p.h  basement_left.cpp  basement_left.h  basement_left_240p.cpp  basement_left_240p.h  basement_right.cpp  basement_right.h  basement_right_240p.cpp  basement_right_240p.h  basement_top.cpp  basement_top.h  basement_top_240p.cpp  basement_top_240p.h  compy_bottom.cpp  compy_bottom.h  compy_bottom_240p.cpp  compy_bottom_240p.h  compy_left.cpp  compy_left.h  compy_left_240p.cpp  compy_left_240p.h  compy_right.cpp  compy_right.h  compy_right_240p.cpp  compy_right_240p.h  compy_top.cpp  compy_top.h  compy_top_240p.cpp  compy_top_240p.h  strong_badia_bottom.cpp  strong_badia_bottom.h  strong_badia_bottom_240p.cpp  strong_badia_bottom_240p.h  strong_badia_left.cpp  strong_badia_left.h  strong_badia_left_240p.cpp  strong_badia_left_240p.h  (+8 more)
Trogdor-Reburninated/src/sfx_h/: arrow.h  burn_hut.cpp  burn_hut.h  burninate.cpp  burninate.h  cutscene.cpp  cutscene.h  death.cpp  death.h  gameover.cpp  gameover.h  kick.cpp  kick.h  sbdooj_short.cpp  sbdooj_short.h  soundboard_itsover.cpp  soundboard_itsover.h  speedincreased.cpp  speedincreased.h  squish.cpp  squish.h  trog_arrow.cpp  trog_arrow.h  trog_goldget.cpp  trog_goldget.h  trog_peasantscream.cpp  trog_peasantscream.h  trog_sb1.cpp  trog_sb1.h  trog_sb2.cpp  trog_sb2.h  trog_sb3.cpp  trog_sb3.h  trog_sb4.cpp  trog_sb4.h  trog_sb5.cpp  trog_sb5.h  trog_sb6.cpp  trog_sb6.h  trog_sb7.cpp  (+33 more)
